# weather_comparison

./: .gitignore  README.md  nws_data.json  pyproject.toml
weather_comp/: ambient_main.py  config.toml  main.py  nsw_data.json  nws_main.py  pyproject.toml  source_comparison.py
weather_comp/analysis/: ambient_main.py  nws_main.py  source_comparison.py
weather_comp/api/: __init__.py  ambient_weather_api.py  nws_api.py  simple_weather.py
weather_comp/dashboard/: weather_dashboard.py
weather_comp/database/: __init_.py  __init__.py  db.py  models.py  read_write
weather_comp/sh/: ambient_main.sh  nws_main.sh  source_comparison.sh
weather_comp/tests/: database_test.py  nsw_api_test.py  nws_api_test.py
